--- a/assets/style.css
+++ b/assets/style.css
@@ -40,13 +40,11 @@ body{
 .header img{
     display: block;
     border-radius: 50%;
-    width: 20%;
+    width: 40%;
     margin-bottom: 30px;
+	transition: 150ms all
 }
 .header img:hover{
-    transition-duration: 0.3s;
-    transition-property: all;
-    transition-timing-function: ease;
     -webkit-box-shadow: -1px -2px 6px 1px rgba(0,0,0,0.44); 
     box-shadow: -1px -2px 6px 1px rgba(0,0,0,0.44);
 }
@@ -87,6 +85,13 @@ body{
     font-size: 25px;
     color: black;
     cursor: pointer;
+}
+.links ul li a{
+    text-decoration: none;
+}
+.links ul li a:visited{
+    text-decoration: none;
+	color: #000;
 }
 .links ul li:first-child{
     margin-right: 30px;
